minor: compatibility and project structure changes - changed a function in StringUtils to make it compatible with older versions of java - moved MovieReader to dao package - changed program execution messages - changed program to use the same number of available processors as the number of threads